Fix projects spacing

--- a/style.css
+++ b/style.css
@@ -171,12 +171,16 @@ main {
 
     display: grid;
     grid-row: 1 / span 2;
-    gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: max-content;
 }
 
-.project {
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 10px;
+}
+
+.card {
     padding: 15px;
     border-radius: 10px;
     background-color: #ffffff;
